# ontology-platform

./: .env  .env.example  .gitignore  .ruff.toml  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Dockerfile  FIX.md  GROWTH_PLAN.md  HEARTBEAT.md  IDENTITY.md  LICENSE  MEMORY.md  OPTIMIZATION_ROADMAP.md  README.md  README_NEW.md  SOUL.md  SOUL.md.bak  TWITTER_THREADS.md  USER.md  VIRALDEMOS.md  ai-team-roles.md  bot.py  create_pptx.py  docker-compose.yml  mkdocs.yml  mypy.ini  ontology_platform_quickstart.ipynb  pyproject.toml  reddit-post-draft.md  reddit-post-final.md  requirements.txt  twitter-api-use-cases.md
.agents/workflows/: do-it.md
.clawra/: memory_backup_20260414.md  workflow_ir_progress.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.streamlit/: config.toml
agent-platform/: PRD-垂直领域Agent平台.md  README.md
community-content/: SUMMARY.md  ceo-strategy-v2.md  community-posts.md  demo-proposal.md  devto-blog-1.md  devto-blog-2.md  devto-blog-3.md  readme-v2.md  reddit-post-v5-final.md
config/: antonym_defaults.json
data/: enterprise_rlhf.db  episodic_memory.db  ontology.jsonl  sample_entities.jsonl  sample_relations.jsonl
docs/: 00_PROJECT_OVERVIEW.md  AGENT_GUIDE.md  ARCHITECTURE.md  BLOG_DISTRIBUTION.md  CHANGELOG.md  COMPARISON_ARTICLE.md  CONCEPT_CLARIFICATION.md  CONFIGURATION.md  DEPLOYMENT.md  EVOLUTION_LOOP.md  GITHUB_NO1_STRATEGY.md  HN_SUBMISSION.md  INTEGRATION_GUIDE.md  PHILOSOPHY.md  QUICKSTART.md  README.md  ROADMAP.md  SDK_GUIDE.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  architecture.md  index.html  prd-v2.md  prd-v3.md  roadmap.md  tech-comparison-neo4j-vs-jena.md  采购需求-老旧小区燃气报警器.md
docs-site/: architecture.md  evolution-loop.md  getting-started.md  index.md  langchain-adapter.md  sdk-guide.md  why-clawra.md
domain_expert/: airline_ontology.md  automotive_ontology.md  coffee_ontology.md  ecommerce_ontology.md  education_ontology.md  energy_ontology.md  healthcare_ontology.md  medical_ontology.md  music_ontology.md  pharma_ontology.md  procurement_ontology.md  relocation_ontology.md  renewable_ontology.md  restaurant_ontology.md  retail_ontology.md  tourism_ontology.md  watch_ontology.md
examples/: README.md  agent_growth_demo.py  clawra_full_stack_demo.py  complete_integration_demo.py  demo_basic.py  demo_case_based_reasoner.py  demo_clawra_e2e.py  demo_confidence_reasoning.py  demo_evolution_loop.py  demo_evolution_loop_v2.py  demo_graphrag.py  demo_langchain_adapter.py  demo_leiden_community.py  demo_pattern_versioning.py  demo_supplier_monitor.py  full_agent_demo.py  full_demo.py  hello_ontology.py  phase3_advanced_demo.py  phase5_enterprise_demo.py  streamlit_app.py  supply_chain_risk_demo.py  web_capability_demo.py  web_demo.py
memory/: 2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-14.md  2026-03-16.md  2026-03-17.md  2026-03-19.md  2026-04-20-selfie-authenticity.md
ontology-platform/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PERFORMANCE.md  README.md  VERSIONING.md  cli.py  config.yaml  docker-compose.prod.yml  docker-compose.yml  legal.md  logging_config.py  main.py  mypy.ini  nginx.prod.conf  requirements.txt  security.md  supervisor.py
ontology_platform/: __init__.py
scripts/: ingest_gas_ontology.py  test_domain_knowledge.py
src/: __init__.py  api.py  cache_strategy.py  caching.py  clawra.py  confidence.py  errors.py  export.py  loader.py  performance.py  permissions.py  reasoner.py  security.py
tests/: README.md  conftest.py  demo_v3_verification.py  test_agent_orchestrator.py  test_behavior_learner.py  test_benchmark.py  test_case_based_reasoner.py  test_chunking.py  test_clawra.py  test_confidence.py  test_config.py  test_config_management.py  test_deep_integration.py  test_distillation.py  test_e2e_pipeline.py  test_end_to_end.py  test_episodic_memory.py  test_errors.py  test_evidence.py  test_evolution_loop.py  test_graph_persistence.py  test_graphrag_retriever.py  test_memory.py  test_memory_episodic.py  test_memory_system.py  test_meta_learner.py  test_metacognition.py  test_pattern_versioning.py  test_performance.py  test_performance_features.py  test_reasoner.py  test_reasoner_enhanced.py  test_rule_discovery.py  test_rule_engine.py  test_sdk_hardening.py  test_security_features.py  test_self_correction_v2.py  test_self_evaluator_v2.py  test_streaming_loader.py  test_unified_logic.py  (+1 more)
(+331 files in other folders)
